Embeds TermSuite resources by default